--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.0.0",
     "typescript": "^3.4.3",
+    "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
