Formatting on circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
 workflows:
   deploy-blog:
     jobs:
-      - deploy-ui
+      - deploy-ui:
           filters:
             branches:
               only: master
