--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,12 @@ jobs:
       - run:
           name: INSTALL - dependencies
           command: npm install
-
       - run:
           name: BUILD - App
           command: npm run build
+      - run:
+          name: DEPLOY - App
+          command: npm run deploy
 
 workflows:
   deploy-blog:
