--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: ECHO BRANCH
+          command: echo $(git branch)
+      - run:
           name: INSTALL - dependencies
           command: npm install
       - run:
