--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,7 @@ jobs:
           command: npm run build
       - run:
           name: DEPLOY - App
-          command: |
-              git config user.email $GITHUB_EMAIL
-              git config user.name $GITHUB_USERNAME
-              npm run deploy
+          command: npm run deploy
 
 workflows:
   deploy-blog:
